chore: update file paths

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,7 @@
 # Lutra Environment Variables
-# Copy this to /etc/lutra/.env and add your actual passwords
+# Copy this file and add your actual passwords:
+#   System-wide install: /etc/lutra/.env
+#   User install:        ~/.config/lutra/.env
 # IMPORTANT: Never commit the real .env file to version control!
 
 # PostgreSQL passwords
